--- a/QuizMasterClient/QuizMasterClient/QuizMasterClient.csproj
+++ b/QuizMasterClient/QuizMasterClient/QuizMasterClient.csproj
@@ -66,8 +66,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Code\GlyphIcon.cshtml" />
     <None Include="packages.config" />
+    <Content Include="Content\images\banner.png" />
     <Content Include="Scripts\Controllers\adminPortalController.js" />
+    <Content Include="Scripts\Controllers\presenterPortalController.js" />
     <Content Include="Scripts\Shared\angular-cookies.js" />
     <Content Include="Scripts\Shared\angular-cookies.min.js" />
     <Content Include="Scripts\Shared\angular-route.js" />
@@ -110,6 +113,8 @@
     <Content Include="Scripts\Shared\jquery-1.9.1.min.js" />
     <Content Include="Style\login.css" />
     <Content Include="Views\adminPortal.html" />
+    <Content Include="Views\PresenterPortal.html" />
+    <Content Include="Views\Team.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
