--- a/QuizMasterClient/QuizMasterClient/QuizMasterClient.csproj
+++ b/QuizMasterClient/QuizMasterClient/QuizMasterClient.csproj
@@ -67,15 +67,28 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <Content Include="Scripts\Controllers\adminPortalController.js" />
+    <Content Include="Scripts\Controllers\admin\adminPortalController.js" />
+    <Content Include="Scripts\Controllers\admin\homeController.js" />
+    <Content Include="Scripts\Controllers\admin\questionsController.js" />
+    <Content Include="Scripts\Controllers\admin\usersController.js" />
     <Content Include="Scripts\Shared\angular-cookies.js" />
     <Content Include="Scripts\Shared\angular-cookies.min.js" />
     <Content Include="Scripts\Shared\angular-route.js" />
     <Content Include="Scripts\Shared\angular-route.min.js" />
+    <Content Include="Scripts\Shared\angular-ui-router.js" />
+    <Content Include="Scripts\Shared\angular-ui-router.min.js" />
     <Content Include="Scripts\Shared\angular.min.js.map" />
     <Content Include="Scripts\Shared\jquery-1.9.1.min.map" />
     <Content Include="Scripts\Shared\angular-cookies.min.js.map" />
     <Content Include="Scripts\Shared\angular-route.min.js.map" />
+    <Content Include="Scripts\Shared\angular-ui-router.js.map" />
+    <Content Include="Scripts\Shared\angular-ui-router.min.js.map" />
+    <Content Include="Scripts\Shared\resolveService.js.map" />
+    <Content Include="Scripts\Shared\resolveService.min.js.map" />
+    <Content Include="Scripts\Shared\stateEvents.js.map" />
+    <Content Include="Scripts\Shared\stateEvents.min.js.map" />
+    <Content Include="Scripts\Shared\ui-router-angularjs.js.map" />
+    <Content Include="Scripts\Shared\ui-router-angularjs.min.js.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -108,8 +121,17 @@
     <Content Include="Scripts\Shared\bootstrap.min.js" />
     <Content Include="Scripts\Shared\jquery-1.9.1.js" />
     <Content Include="Scripts\Shared\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\Shared\resolveService.js" />
+    <Content Include="Scripts\Shared\resolveService.min.js" />
+    <Content Include="Scripts\Shared\stateEvents.js" />
+    <Content Include="Scripts\Shared\stateEvents.min.js" />
+    <Content Include="Scripts\Shared\ui-router-angularjs.js" />
+    <Content Include="Scripts\Shared\ui-router-angularjs.min.js" />
     <Content Include="Style\login.css" />
-    <Content Include="Views\adminPortal.html" />
+    <Content Include="Views\admin\adminPortal.html" />
+    <Content Include="Views\admin\home.html" />
+    <Content Include="Views\admin\questions.html" />
+    <Content Include="Views\admin\users.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
