--- a/QuizMasterAPI/QuizMasterAPI/QuizMasterAPI.csproj
+++ b/QuizMasterAPI/QuizMasterAPI/QuizMasterAPI.csproj
@@ -153,7 +153,7 @@
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuizMasterDBContext.cs" />
+    <Compile Include="Models\QuizMasterDBContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
